Fix intern props Closes #20

--- a/pet-clinic-web/src/main/resources/messages/messages_hu.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages_hu.properties
@@ -1,8 +1,8 @@
-welcome=‹dv
-required=kˆtelez?
-notFound=nem tal·lhatÛ
-duplicate=m·r haszn·latban
-nonNumeric=csak sz·mbÛl ·llhat
-duplicateFormSubmission=M·r lÈtez? adatok, nem megengedett m?velet
-typeMismatch.date=Rossz d·tum
-typeMismatch.birthDate=Rossz d·tum
+welcome=√údv
+required=k√∂telez≈ë?
+notFound=nem tal√°lhat√≥
+duplicate=m√°r haszn√°latban
+nonNumeric=csak sz√°mb√≥l √°llhat
+duplicateFormSubmission=M√°r l√©tez≈ë adatok, nem megengedett m≈±velet
+typeMismatch.date=Rossz d√°tum
+typeMismatch.birthDate=Rossz d√°tum
